[gd_scene load_steps=2 format=3 uid="uid://bdkkuyqvy3io3"]

[ext_resource type="Script" path="res://menu.gd" id="1_k6e4g"]

[node name="Node2D" type="Node2D"]
position = Vector2(31, 103)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k6e4g")

[node name="Label" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 404.0
offset_top = 75.0
offset_right = 588.0
offset_bottom = 98.0
text = "Planejamento de Dietas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 442.0
offset_top = 183.0
offset_right = 561.0
offset_bottom = 284.0
alignment = 1

[node name="Button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Iniciar Jogo"

[node name="Button4" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Sobre o Jogo"

[node name="Button3" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Menu/VBoxContainer/Button" to="Menu" method="_on_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Button4" to="Menu" method="_on_button_4_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Button3" to="Menu" method="_on_button_3_pressed"]
